fix text-align on price

--- a/src/components/Price/Price.module.css
+++ b/src/components/Price/Price.module.css
@@ -60,6 +60,7 @@
 .label {
   display: flex;
   justify-content: space-between;
+  text-align: left;
 }
 
 
